Bug 286922 - edited mail from outbox deleted after closing
Summary: edited mail from outbox deleted after closing
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99.0
Platform: Unlisted Binaries Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-18 13:52 UTC by H.H.
Modified: 2011-11-18 18:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2011-11-18 13:52:07 UTC
Version:           1.99.0
OS:                Linux

A mail from my outbox had problems with server, so remained in outbox for sending later. I opened the mail from outbox to read the mail and closed it again. Then the mail was deleted.



Reproducible: Always

Steps to Reproduce:
- create a new mail and try to send it, but sending fails (or save it somehow in outbox)
- edit mail again from outbox
- close edit-window by clicking the cross right on top of the window


Actual Results:  
the mail is deleted

Expected Results:  
the mail should be saved again in outbox

OS: Linux (x86_64) release 2.6.37.1-1.2-desktop
Compiler: gcc
Comment 1 Laurent Montel 2011-11-18 18:04:53 UTC
Git commit 7716ee848f46cbed515a72d3dd12a6da1286bf20 by Montel Laurent.
Committed on 18/11/2011 at 19:04.
Pushed by mlaurent into branch 'master'.

Fix Bug 286922 - edited mail from outbox deleted after closing

FIXED-IN: 4.7.4
BUG: 286922

M  +1    -1    kmail/composer.h
M  +2    -0    kmail/kmcommands.cpp

http://commits.kde.org/kdepim/7716ee848f46cbed515a72d3dd12a6da1286bf20
Comment 2 Laurent Montel 2011-11-18 18:06:26 UTC
Git commit 49bfa71da08fd08e8fbfbd0845f949671e25c61d by Montel Laurent.
Committed on 18/11/2011 at 19:04.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 286922 - edited mail from outbox deleted after closing

FIXED-IN: 4.7.4
BUG: 286922
(cherry picked from commit 7716ee848f46cbed515a72d3dd12a6da1286bf20)

M  +1    -1    kmail/composer.h
M  +2    -0    kmail/kmcommands.cpp

http://commits.kde.org/kdepim/49bfa71da08fd08e8fbfbd0845f949671e25c61d