Fix Bug 286922 - edited mail from outbox deleted after closing

FIXED-IN: 4.7.4
BUG: 286922